[gd_scene load_steps=15 format=3 uid="uid://7dgrnxitdesd"]

[ext_resource type="Script" uid="uid://bmsjn1a4d8bud" path="res://scripts/main.gd" id="1_ig7tw"]
[ext_resource type="Theme" uid="uid://be4k1mpa3c0x6" path="res://scenes/default_theme.tres" id="1_o6xl0"]
[ext_resource type="Texture2D" uid="uid://drr1alll481c4" path="res://icon.svg" id="2_0wfyh"]
[ext_resource type="AudioStream" uid="uid://6ooyd4eyxf2y" path="res://alert.wav" id="2_sugp2"]
[ext_resource type="Texture2D" uid="uid://b2qaxvnsiy6o4" path="res://assets/dungeon-night.png" id="2_tbgi4"]
[ext_resource type="Texture2D" uid="uid://byl1bsudqd8co" path="res://assets/dungeon-day.png" id="3_tefeu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0wfyh"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.85098, 0.309804, 0.188235, 0.0235294)
corner_detail = 1

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_o6xl0"]
resource_name = "dark"
texture = ExtResource("2_tbgi4")
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
31:0/0 = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_side = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/terrains_peering_bit/right_side = 0
2:1/0/terrains_peering_bit/left_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/left_side = 0
5:1/0 = 0
5:1/0/terrain_set = 0
5:1/0/terrain = 0
5:1/0/terrains_peering_bit/right_side = 0
5:1/0/terrains_peering_bit/bottom_side = 0
6:1/0 = 0
6:1/0/terrain_set = 0
6:1/0/terrain = 0
6:1/0/terrains_peering_bit/right_side = 0
6:1/0/terrains_peering_bit/left_side = 0
7:1/0 = 0
7:1/0/terrain_set = 0
7:1/0/terrain = 0
7:1/0/terrains_peering_bit/bottom_side = 0
7:1/0/terrains_peering_bit/left_side = 0
9:1/0 = 0
9:1/0/terrain_set = 0
9:1/0/terrains_peering_bit/bottom_right_corner = 0
9:1/0/terrains_peering_bit/bottom_side = 0
10:1/0 = 0
10:1/0/terrain_set = 0
10:1/0/terrains_peering_bit/bottom_side = 0
10:1/0/terrains_peering_bit/bottom_left_corner = 0
12:1/0 = 0
13:1/0 = 0
15:1/0 = 0
16:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
31:1/0 = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/terrains_peering_bit/bottom_side = 0
1:2/0/terrains_peering_bit/top_side = 0
2:2/0 = 0
2:2/0/terrain_set = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/terrains_peering_bit/bottom_side = 0
3:2/0/terrains_peering_bit/top_side = 0
5:2/0 = 0
5:2/0/terrain_set = 0
5:2/0/terrain = 0
5:2/0/terrains_peering_bit/bottom_side = 0
5:2/0/terrains_peering_bit/top_side = 0
6:2/0 = 0
6:2/0/terrain_set = 0
7:2/0 = 0
7:2/0/terrain_set = 0
7:2/0/terrain = 0
7:2/0/terrains_peering_bit/bottom_side = 0
7:2/0/terrains_peering_bit/top_side = 0
9:2/0 = 0
9:2/0/terrain_set = 0
9:2/0/terrains_peering_bit/top_side = 0
9:2/0/terrains_peering_bit/top_right_corner = 0
10:2/0 = 0
10:2/0/terrain_set = 0
10:2/0/terrains_peering_bit/top_left_corner = 0
10:2/0/terrains_peering_bit/top_side = 0
12:2/0 = 0
13:2/0 = 0
15:2/0 = 0
16:2/0 = 0
20:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/top_side = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/terrains_peering_bit/right_side = 0
2:3/0/terrains_peering_bit/left_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrains_peering_bit/left_side = 0
3:3/0/terrains_peering_bit/top_side = 0
5:3/0 = 0
5:3/0/terrain_set = 0
5:3/0/terrain = 0
5:3/0/terrains_peering_bit/right_side = 0
5:3/0/terrains_peering_bit/top_side = 0
6:3/0 = 0
6:3/0/terrain_set = 0
6:3/0/terrain = 0
6:3/0/terrains_peering_bit/right_side = 0
6:3/0/terrains_peering_bit/left_side = 0
7:3/0 = 0
7:3/0/terrain_set = 0
7:3/0/terrain = 0
7:3/0/terrains_peering_bit/left_side = 0
7:3/0/terrains_peering_bit/top_side = 0
20:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
9:4/0 = 0
9:4/0/terrain_set = 0
9:4/0/terrains_peering_bit/bottom_right_corner = 0
10:4/0 = 0
10:4/0/terrain_set = 0
10:4/0/terrains_peering_bit/bottom_left_corner = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
1:5/0 = 0
1:5/0/terrain_set = 0
1:5/0/terrain = 0
1:5/0/terrains_peering_bit/right_side = 0
2:5/0 = 0
2:5/0/terrain_set = 0
2:5/0/terrain = 0
2:5/0/terrains_peering_bit/right_side = 0
2:5/0/terrains_peering_bit/left_side = 0
3:5/0 = 0
3:5/0/terrain_set = 0
3:5/0/terrain = 0
3:5/0/terrains_peering_bit/left_side = 0
5:5/0 = 0
5:5/0/terrain_set = 0
5:5/0/terrains_peering_bit/bottom_side = 0
7:5/0 = 0
7:5/0/terrain_set = 0
7:5/0/terrains_peering_bit/bottom_side = 0
9:5/0 = 0
9:5/0/terrain_set = 0
9:5/0/terrains_peering_bit/top_right_corner = 0
10:5/0 = 0
10:5/0/terrain_set = 0
10:5/0/terrains_peering_bit/top_left_corner = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
5:6/0 = 0
5:6/0/terrain_set = 0
5:6/0/terrain = 0
5:6/0/terrains_peering_bit/bottom_side = 0
5:6/0/terrains_peering_bit/top_side = 0
7:6/0 = 0
7:6/0/terrain_set = 0
7:6/0/terrain = 0
7:6/0/terrains_peering_bit/bottom_side = 0
7:6/0/terrains_peering_bit/top_side = 0
13:6/0 = 0
14:6/0 = 0
1:7/0 = 0
1:7/0/terrain_set = 0
1:7/0/terrain = 0
1:7/0/terrains_peering_bit/right_side = 0
2:7/0 = 0
2:7/0/terrain_set = 0
2:7/0/terrain = 0
2:7/0/terrains_peering_bit/right_side = 0
2:7/0/terrains_peering_bit/left_side = 0
3:7/0 = 0
3:7/0/terrain_set = 0
3:7/0/terrain = 0
3:7/0/terrains_peering_bit/left_side = 0
5:7/0 = 0
5:7/0/terrain_set = 0
5:7/0/terrains_peering_bit/top_side = 0
7:7/0 = 0
7:7/0/terrain_set = 0
7:7/0/terrains_peering_bit/top_side = 0
14:7/0 = 0
15:7/0 = 0
19:7/0 = 0
19:7/0/terrain_set = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
31:7/0 = 0
11:8/0 = 0
11:8/0/terrain_set = 0
11:8/0/terrains_peering_bit/bottom_side = 2
12:8/0 = 0
12:8/0/terrain_set = 0
12:8/0/terrains_peering_bit/bottom_side = 2
31:8/0 = 0
7:9/0 = 0
7:9/0/terrain_set = 0
7:9/0/terrains_peering_bit/right_side = 2
7:9/0/terrains_peering_bit/bottom_right_corner = 2
8:9/0 = 0
8:9/0/terrain_set = 0
8:9/0/terrain = 2
8:9/0/terrains_peering_bit/bottom_side = 2
8:9/0/terrains_peering_bit/left_side = 2
10:9/0 = 0
10:9/0/terrain_set = 0
10:9/0/terrains_peering_bit/right_side = 2
10:9/0/terrains_peering_bit/bottom_right_corner = 2
11:9/0 = 0
11:9/0/terrain_set = 0
11:9/0/terrain = 2
11:9/0/terrains_peering_bit/right_side = 2
11:9/0/terrains_peering_bit/left_side = 2
11:9/0/terrains_peering_bit/top_side = 2
12:9/0 = 0
12:9/0/terrain_set = 0
12:9/0/terrain = 2
12:9/0/terrains_peering_bit/right_side = 2
12:9/0/terrains_peering_bit/left_side = 2
12:9/0/terrains_peering_bit/top_side = 2
13:9/0 = 0
13:9/0/terrain_set = 0
13:9/0/terrain = 2
13:9/0/terrains_peering_bit/bottom_side = 2
13:9/0/terrains_peering_bit/left_side = 2
20:9/0 = 0
20:9/0/terrain_set = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
30:9/0 = 0
31:9/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
6:10/0/terrain_set = 0
6:10/0/terrain = 2
6:10/0/terrains_peering_bit/right_side = 2
7:10/0 = 0
7:10/0/terrain_set = 0
7:10/0/terrain = 2
7:10/0/terrains_peering_bit/right_side = 2
7:10/0/terrains_peering_bit/left_side = 2
7:10/0/terrains_peering_bit/top_right_corner = 2
8:10/0 = 0
8:10/0/terrain_set = 0
8:10/0/terrain = 2
8:10/0/terrains_peering_bit/right_side = 2
8:10/0/terrains_peering_bit/left_side = 2
8:10/0/terrains_peering_bit/top_side = 2
9:10/0 = 0
9:10/0/terrain_set = 0
9:10/0/terrain = 2
9:10/0/terrains_peering_bit/right_side = 2
9:10/0/terrains_peering_bit/left_side = 2
10:10/0 = 0
10:10/0/terrain_set = 0
10:10/0/terrain = 2
10:10/0/terrains_peering_bit/right_side = 2
10:10/0/terrains_peering_bit/bottom_right_corner = 2
10:10/0/terrains_peering_bit/left_side = 2
10:10/0/terrains_peering_bit/top_right_corner = 2
13:10/0 = 0
13:10/0/terrain_set = 0
13:10/0/terrain = 2
13:10/0/terrains_peering_bit/right_side = 2
13:10/0/terrains_peering_bit/bottom_left_corner = 2
13:10/0/terrains_peering_bit/left_side = 2
13:10/0/terrains_peering_bit/top_side = 2
14:10/0 = 0
14:10/0/terrain_set = 0
14:10/0/terrain = 2
14:10/0/terrains_peering_bit/right_side = 2
14:10/0/terrains_peering_bit/left_side = 2
15:10/0 = 0
15:10/0/terrain_set = 0
15:10/0/terrain = 2
15:10/0/terrains_peering_bit/left_side = 2
20:10/0 = 0
20:10/0/terrain_set = 0
20:10/0/terrains_peering_bit/bottom_side = 1
1:11/0 = 0
2:11/0 = 0
8:11/0 = 0
8:11/0/terrain_set = 0
8:11/0/terrain = 2
8:11/0/terrains_peering_bit/right_side = 2
8:11/0/terrains_peering_bit/left_side = 2
9:11/0 = 0
9:11/0/terrain_set = 0
9:11/0/terrain = 2
9:11/0/terrains_peering_bit/right_side = 2
9:11/0/terrains_peering_bit/left_side = 2
10:11/0 = 0
10:11/0/terrain_set = 0
10:11/0/terrain = 2
10:11/0/terrains_peering_bit/right_side = 2
10:11/0/terrains_peering_bit/bottom_right_corner = 2
10:11/0/terrains_peering_bit/left_side = 2
10:11/0/terrains_peering_bit/top_right_corner = 2
13:11/0 = 0
13:11/0/terrain_set = 0
13:11/0/terrain = 2
13:11/0/terrains_peering_bit/right_side = 2
13:11/0/terrains_peering_bit/bottom_left_corner = 2
13:11/0/terrains_peering_bit/left_side = 2
13:11/0/terrains_peering_bit/top_left_corner = 2
14:11/0 = 0
14:11/0/terrain_set = 0
14:11/0/terrain = 2
14:11/0/terrains_peering_bit/right_side = 2
14:11/0/terrains_peering_bit/left_side = 2
19:11/0 = 0
19:11/0/terrain_set = 0
19:11/0/terrain = 1
19:11/0/terrains_peering_bit/right_side = 1
19:11/0/terrains_peering_bit/bottom_right_corner = 1
19:11/0/terrains_peering_bit/bottom_side = 1
19:11/0/terrains_peering_bit/bottom_left_corner = 1
19:11/0/terrains_peering_bit/top_right_corner = 1
20:11/0 = 0
20:11/0/terrain_set = 0
20:11/0/terrain = 1
20:11/0/terrains_peering_bit/right_side = 1
20:11/0/terrains_peering_bit/bottom_right_corner = 1
20:11/0/terrains_peering_bit/bottom_side = 1
20:11/0/terrains_peering_bit/bottom_left_corner = 1
20:11/0/terrains_peering_bit/left_side = 1
20:11/0/terrains_peering_bit/top_left_corner = 1
20:11/0/terrains_peering_bit/top_side = 1
20:11/0/terrains_peering_bit/top_right_corner = 1
21:11/0 = 0
21:11/0/terrain_set = 0
21:11/0/terrain = 1
21:11/0/terrains_peering_bit/right_side = 1
21:11/0/terrains_peering_bit/bottom_right_corner = 1
21:11/0/terrains_peering_bit/bottom_side = 1
21:11/0/terrains_peering_bit/bottom_left_corner = 1
21:11/0/terrains_peering_bit/left_side = 1
22:11/0 = 0
22:11/0/terrain_set = 0
22:11/0/terrain = 1
22:11/0/terrains_peering_bit/right_side = 1
22:11/0/terrains_peering_bit/bottom_right_corner = 1
22:11/0/terrains_peering_bit/bottom_side = 1
22:11/0/terrains_peering_bit/bottom_left_corner = 1
22:11/0/terrains_peering_bit/left_side = 1
23:11/0 = 0
23:11/0/terrain_set = 0
23:11/0/terrain = 1
23:11/0/terrains_peering_bit/right_side = 1
23:11/0/terrains_peering_bit/bottom_right_corner = 1
23:11/0/terrains_peering_bit/bottom_side = 1
23:11/0/terrains_peering_bit/bottom_left_corner = 1
23:11/0/terrains_peering_bit/left_side = 1
24:11/0 = 0
24:11/0/terrain_set = 0
24:11/0/terrains_peering_bit/bottom_right_corner = 1
24:11/0/terrains_peering_bit/bottom_side = 1
24:11/0/terrains_peering_bit/bottom_left_corner = 1
24:11/0/terrains_peering_bit/left_side = 1
5:12/0 = 0
6:12/0 = 0
8:12/0 = 0
8:12/0/terrain_set = 0
9:12/0 = 0
9:12/0/terrain_set = 0
10:12/0 = 0
10:12/0/terrain_set = 0
10:12/0/terrains_peering_bit/top_right_corner = 2
11:12/0 = 0
11:12/0/terrain_set = 0
11:12/0/terrains_peering_bit/top_left_corner = 2
11:12/0/terrains_peering_bit/top_side = 2
11:12/0/terrains_peering_bit/top_right_corner = 2
12:12/0 = 0
12:12/0/terrain_set = 0
12:12/0/terrains_peering_bit/top_left_corner = 2
12:12/0/terrains_peering_bit/top_side = 2
12:12/0/terrains_peering_bit/top_right_corner = 2
13:12/0 = 0
13:12/0/terrain_set = 0
13:12/0/terrains_peering_bit/top_left_corner = 2
14:12/0 = 0
14:12/0/terrain_set = 0
18:12/0 = 0
18:12/0/terrain_set = 0
18:12/0/terrain = 1
18:12/0/terrains_peering_bit/right_side = 1
18:12/0/terrains_peering_bit/bottom_right_corner = 1
18:12/0/terrains_peering_bit/bottom_side = 1
18:12/0/terrains_peering_bit/bottom_left_corner = 1
18:12/0/terrains_peering_bit/top_right_corner = 1
19:12/0 = 0
19:12/0/terrain_set = 0
19:12/0/terrain = 1
19:12/0/terrains_peering_bit/right_side = 1
19:12/0/terrains_peering_bit/bottom_right_corner = 1
19:12/0/terrains_peering_bit/bottom_side = 1
19:12/0/terrains_peering_bit/bottom_left_corner = 1
19:12/0/terrains_peering_bit/left_side = 1
19:12/0/terrains_peering_bit/top_left_corner = 1
19:12/0/terrains_peering_bit/top_side = 1
19:12/0/terrains_peering_bit/top_right_corner = 1
20:12/0 = 0
20:12/0/terrain_set = 0
20:12/0/terrain = 1
20:12/0/terrains_peering_bit/right_side = 1
20:12/0/terrains_peering_bit/bottom_right_corner = 1
20:12/0/terrains_peering_bit/bottom_side = 1
20:12/0/terrains_peering_bit/bottom_left_corner = 1
20:12/0/terrains_peering_bit/left_side = 1
20:12/0/terrains_peering_bit/top_left_corner = 1
20:12/0/terrains_peering_bit/top_side = 1
20:12/0/terrains_peering_bit/top_right_corner = 1
21:12/0 = 0
21:12/0/terrain_set = 0
21:12/0/terrain = 1
21:12/0/terrains_peering_bit/right_side = 1
21:12/0/terrains_peering_bit/bottom_right_corner = 1
21:12/0/terrains_peering_bit/bottom_side = 1
21:12/0/terrains_peering_bit/bottom_left_corner = 1
21:12/0/terrains_peering_bit/left_side = 1
21:12/0/terrains_peering_bit/top_left_corner = 1
21:12/0/terrains_peering_bit/top_side = 1
21:12/0/terrains_peering_bit/top_right_corner = 1
22:12/0 = 0
22:12/0/terrain_set = 0
22:12/0/terrain = 1
22:12/0/terrains_peering_bit/right_side = 1
22:12/0/terrains_peering_bit/bottom_right_corner = 1
22:12/0/terrains_peering_bit/bottom_side = 1
22:12/0/terrains_peering_bit/bottom_left_corner = 1
22:12/0/terrains_peering_bit/left_side = 1
22:12/0/terrains_peering_bit/top_left_corner = 1
22:12/0/terrains_peering_bit/top_side = 1
22:12/0/terrains_peering_bit/top_right_corner = 1
23:12/0 = 0
23:12/0/terrain_set = 0
23:12/0/terrain = 1
23:12/0/terrains_peering_bit/right_side = 1
23:12/0/terrains_peering_bit/bottom_right_corner = 1
23:12/0/terrains_peering_bit/bottom_side = 1
23:12/0/terrains_peering_bit/bottom_left_corner = 1
23:12/0/terrains_peering_bit/left_side = 1
23:12/0/terrains_peering_bit/top_left_corner = 1
23:12/0/terrains_peering_bit/top_side = 1
23:12/0/terrains_peering_bit/top_right_corner = 1
24:12/0 = 0
24:12/0/terrain_set = 0
24:12/0/terrain = 1
24:12/0/terrains_peering_bit/right_side = 1
24:12/0/terrains_peering_bit/bottom_right_corner = 1
24:12/0/terrains_peering_bit/bottom_side = 1
24:12/0/terrains_peering_bit/bottom_left_corner = 1
24:12/0/terrains_peering_bit/left_side = 1
24:12/0/terrains_peering_bit/top_left_corner = 1
24:12/0/terrains_peering_bit/top_side = 1
24:12/0/terrains_peering_bit/top_right_corner = 1
25:12/0 = 0
25:12/0/terrain_set = 0
25:12/0/terrain = 1
25:12/0/terrains_peering_bit/bottom_right_corner = 1
25:12/0/terrains_peering_bit/bottom_side = 1
25:12/0/terrains_peering_bit/bottom_left_corner = 1
25:12/0/terrains_peering_bit/left_side = 1
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
5:13/0 = 0
6:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
28:13/0 = 0
29:13/0 = 0
30:13/0 = 0
31:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
5:14/0 = 0
6:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
13:14/0 = 0
14:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
30:14/0 = 0
31:14/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tipki"]
resource_name = "light"
texture = ExtResource("3_tefeu")
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
31:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
15:1/0 = 0
16:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
31:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
9:2/0 = 0
10:2/0 = 0
12:2/0 = 0
13:2/0 = 0
15:2/0 = 0
16:2/0 = 0
20:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
20:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
9:4/0 = 0
10:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
5:5/0 = 0
7:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
5:6/0 = 0
7:6/0 = 0
13:6/0 = 0
14:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
5:7/0 = 0
7:7/0 = 0
14:7/0 = 0
15:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
31:7/0 = 0
11:8/0 = 0
12:8/0 = 0
31:8/0 = 0
7:9/0 = 0
8:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
30:9/0 = 0
31:9/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
20:10/0 = 0
1:11/0 = 0
2:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
13:11/0 = 0
14:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
5:12/0 = 0
6:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
5:13/0 = 0
6:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
28:13/0 = 0
29:13/0 = 0
30:13/0 = 0
31:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
5:14/0 = 0
6:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
13:14/0 = 0
14:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
30:14/0 = 0
31:14/0 = 0

[sub_resource type="TileSet" id="TileSet_85g3d"]
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "stone"
terrain_set_0/terrain_0/color = Color(0.266667, 0.172549, 0.490196, 1)
terrain_set_0/terrain_1/name = "mountain"
terrain_set_0/terrain_1/color = Color(0.5, 0.4375, 0.25, 1)
terrain_set_0/terrain_2/name = "wood"
terrain_set_0/terrain_2/color = Color(0.858588, 0.138851, 0.248475, 1)
sources/0 = SubResource("TileSetAtlasSource_o6xl0")
sources/1 = SubResource("TileSetAtlasSource_tipki")

[sub_resource type="Theme" id="Theme_85g3d"]

[sub_resource type="Theme" id="Theme_tbgi4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o6xl0"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.945098, 0.917647, 0.886275, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.360784, 0.290196, 0.235294, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0
shadow_color = Color(0.360784, 0.290196, 0.235294, 1)

[sub_resource type="Theme" id="Theme_tipki"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_o6xl0")
script = ExtResource("1_ig7tw")

[node name="Notifications" type="Label" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -54.0
offset_top = 10.0
offset_right = 54.0
offset_bottom = 48.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_0wfyh")
text = "hear ye hear ye!"

[node name="Background" type="ColorRect" parent="."]
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.364706, 0.27451, 0.372549, 1)

[node name="TileMapLayer" type="TileMapLayer" parent="Background"]
tile_set = SubResource("TileSet_85g3d")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="MainVBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TorchTracker" type="Label" parent="MarginContainer/MainVBox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Torch Timer"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MainVBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="CastLightSpellButton" type="Button" parent="MarginContainer/MainVBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_85g3d")
text = "cast light spell"

[node name="LightTorchButton" type="Button" parent="MarginContainer/MainVBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_tbgi4")
text = "light torch"

[node name="PartyLight" type="VBoxContainer" parent="MarginContainer/MainVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 32
alignment = 1

[node name="AudioWarning" type="AudioStreamPlayer2D" parent="MarginContainer"]
stream = ExtResource("2_sugp2")

[node name="AudioCritical" type="AudioStreamPlayer2D" parent="MarginContainer"]
stream = ExtResource("2_sugp2")

[node name="AudioEnd" type="AudioStreamPlayer2D" parent="MarginContainer"]
stream = ExtResource("2_sugp2")

[node name="SettingsButton" type="Button" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -76.0
offset_top = 9.0
offset_right = 60.0
offset_bottom = 145.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
icon = ExtResource("2_0wfyh")
flat = true
icon_alignment = 2

[node name="SettingsPanel" type="Control" parent="."]
visible = false
z_index = 10
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="SettingsPanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.945098, 0.917647, 0.886275, 1)

[node name="PanelContainer" type="PanelContainer" parent="SettingsPanel/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.0
offset_top = -103.0
offset_right = 93.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o6xl0")

[node name="CenterContainer" type="CenterContainer" parent="SettingsPanel/ColorRect/PanelContainer"]
layout_mode = 2

[node name="SettingsVBox" type="VBoxContainer" parent="SettingsPanel/ColorRect/PanelContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="SettingsPanel/ColorRect/PanelContainer/CenterContainer/SettingsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 42
text = "Settings"
horizontal_alignment = 1

[node name="DurationHBox" type="HBoxContainer" parent="SettingsPanel/ColorRect/PanelContainer/CenterContainer/SettingsVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsPanel/ColorRect/PanelContainer/CenterContainer/SettingsVBox/DurationHBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Duration:"

[node name="SpinBox" type="SpinBox" parent="SettingsPanel/ColorRect/PanelContainer/CenterContainer/SettingsVBox/DurationHBox"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/up_hover_icon_modulate = Color(0, 0, 0, 1)
theme_override_colors/up_icon_modulate = Color(0, 0, 0, 1)
theme_override_colors/up_pressed_icon_modulate = Color(0, 0, 0, 1)
theme_override_colors/up_disabled_icon_modulate = Color(0, 0, 0, 1)
theme_override_colors/down_icon_modulate = Color(0, 0, 0, 1)
theme_override_colors/down_hover_icon_modulate = Color(0, 0, 0, 1)
theme_override_colors/down_pressed_icon_modulate = Color(0, 0, 0, 1)
theme_override_colors/down_disabled_icon_modulate = Color(0, 0, 0, 1)
min_value = 1.0
max_value = 999.0
value = 6.0
alignment = 2

[node name="UnitsHBox" type="HBoxContainer" parent="SettingsPanel/ColorRect/PanelContainer/CenterContainer/SettingsVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsPanel/ColorRect/PanelContainer/CenterContainer/SettingsVBox/UnitsHBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Units:"

[node name="OptionButton" type="OptionButton" parent="SettingsPanel/ColorRect/PanelContainer/CenterContainer/SettingsVBox/UnitsHBox"]
layout_mode = 2
size_flags_horizontal = 10
item_count = 3
popup/item_0/text = "Minutes"
popup/item_0/id = 0
popup/item_1/text = "Turns"
popup/item_1/id = 1
popup/item_2/text = "Hours"
popup/item_2/id = 2

[node name="SoundHBox" type="HBoxContainer" parent="SettingsPanel/ColorRect/PanelContainer/CenterContainer/SettingsVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsPanel/ColorRect/PanelContainer/CenterContainer/SettingsVBox/SoundHBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Sound Alerts:"

[node name="CheckBox" type="CheckBox" parent="SettingsPanel/ColorRect/PanelContainer/CenterContainer/SettingsVBox/SoundHBox"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme = SubResource("Theme_tipki")
button_pressed = true

[node name="ButtonsHBox" type="HBoxContainer" parent="SettingsPanel/ColorRect/PanelContainer/CenterContainer/SettingsVBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="CloseButton" type="Button" parent="SettingsPanel/ColorRect/PanelContainer/CenterContainer/SettingsVBox/ButtonsHBox"]
layout_mode = 2
text = "Close"

[node name="ApplyButton" type="Button" parent="SettingsPanel/ColorRect/PanelContainer/CenterContainer/SettingsVBox/ButtonsHBox"]
layout_mode = 2
text = "Apply"

[node name="ReplaceLightSourceDialog" type="ConfirmationDialog" parent="."]
title = "Replace Light Source"
size = Vector2i(260, 100)
ok_button_text = "Replace Light Source"
